<?xml version="1.0"?>
<package format="2">
  <name>roscam_tensorflow2</name>
  <version>0.0.0</version>
  <description>The roscam_tensorflow2 package</description>


  <maintainer email="gael.fargeas@gmail.com">gael</maintainer>
  <author email="gael.fargeas@gmail.com">gael</author>
  <url type="website">https://github.com/gaelfargeas/ROScam_project</url>

  <license>BSD-3-clause</license>


  <!-- tensorflow dependencies -->
  <depend>python-tensorflow-pip</depend> 
  <depend>tensorflow_catkin</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
